--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vant": "^2.8.4",
     "vconsole": "^3.3.4",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.3",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.2.0",
     "weixin-js-sdk": "^1.6.0",
